0.13.0.dev (UNRELEASED)
=======================

 * Code migrated to Zope 2.10 / Plone 3.0, older versions no longer supported.
   This requires database migrations that cannot be undone, so make backups
   and test thoroughly.  See
https://svn.openplans.org/svn/opencore/trunk/docs/Plone2.5-Plone3-migration.txt
   for more instructions.
   (rafrombrc)

 * Avoid site error on wiki edit if catalog has stale entries for attachments.
   (slinkp)

 * Add viewlet manager for data right before the end of the body tag (rmarianski)

 * Update contact/wiki add unit tests to directly instantiate class (rmarianski)

 * Correct condition on summary page lists blank slate (rmarianski)

 * Textarea borders should be focused orange instead of lime (rmarianski)

 * remove oc-getstarted div around adding a mailing list for aesthetic reasons
   (rmarianski)

 * add link on home page news header to news page (rmarianski)

 * uncomment getting started section of home page (rmarianski)

 * Add viewlet manager hook for additional head elements in main template
   (rmarianski)

 * Add opencore.tales which contains an opencore: syntax for
   pretty_date and project_noun (rmarianski)

 * Output error messages for Supervisord

0.12.0 (2008-07-11)
===================

 * New form for deleting accounts (not linked to from anywhere yet,
   you have to visit people/foo/delete) (slinkp) (trac feature #2223)

 * Zip file export view of project wiki pages (not linked to from
   anywhere yet, you have to visit projects/foo/project-pages-export.zip)
   (slinkp)

 * Fixed #2010: Project contents form should use POST, not GET (slinkp)

 * Email obfuscation for listen views (cabraham)

 * Rig in listen message_macros templates (rmarianski)

 * fix team AttributeError reported by user on summary page (rmarianski)

 * fix site_url AttributeError reported by user on password reset (rmarianski)

 * revert changes to login in current thread due to side effects (rmarianski)
